<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/MatchMatch"
                android:background="@color/bg_gray"
                android:fitsSystemWindows="true">

    <com.szinternet.crm.view.NoScrollViewPager
        android:id="@+id/vp_container_main"
        style="@style/MatchMatch"
        android:layout_above="@+id/line"
        android:layout_weight="1"/>
    <!--底部Tab-->
    <View
        android:id="@+id/line"
        style="@style/MatchOne"
        android:layout_above="@+id/tab"
        android:background="@color/grey_e0e0e0"/>

    <RadioGroup
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="bottom|center"
        android:background="@color/white"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home_main"
            style="@style/main_footer_bar_radio"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/selector_icon_home"
            android:paddingTop="@dimen/height_5dp"
            android:text="@string/home"
            android:textColor="@drawable/selector_main_tab_text_color"/>

        <RadioButton
            android:id="@+id/rb_home_card"
            style="@style/main_footer_bar_radio"
            android:button="@null"
            android:drawableTop="@drawable/selector_icon_card"
            android:paddingTop="@dimen/width_5dp"
            android:text="@string/card"
            android:textColor="@drawable/selector_main_tab_text_color"/>

        <View
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"/>

        <RadioButton
            android:id="@+id/rb_home_pay_record"
            style="@style/main_footer_bar_radio"
            android:button="@null"
            android:drawableTop="@drawable/selector_icon_profit"
            android:paddingTop="@dimen/width_5dp"
            android:text="@string/profit"
            android:textColor="@drawable/selector_main_tab_text_color"/>

        <RadioButton
            android:id="@+id/rb_home_me"
            style="@style/main_footer_bar_radio"
            android:button="@null"
            android:drawableTop="@drawable/selector_icon_mine"
            android:paddingTop="@dimen/width_5dp"
            android:text="@string/mine"
            android:textColor="@drawable/selector_main_tab_text_color"/>
    </RadioGroup>

    <ImageView
        android:id="@+id/btn_main_share"
        android:layout_width="@dimen/height_50dp"
        android:layout_height="@dimen/height_50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/height_10dp"
        android:background="@mipmap/my_share"/>
</RelativeLayout>